# pendant2022

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootloader.cpp  bootloader.h  bq25895.cpp  bq25895.h  build.sh  color.cpp  color.h  descriptors.c  effects.cpp  effects.h  ens210.cpp  ens210.h  fastmath.h  font_convert.py  gcc_arm_128k_bootloaded.ld  gcc_arm_128k_bootloader.ld  gcc_arm_128k_vscode.ld  i2cmanager.cpp  i2cmanager.h  ics43434.cpp  ics43434.h  input.cpp  input.h  leds.cpp  leds.h  lorawan.cpp  lorawan.h  lorawan_glue.cpp  lsm6dsm.cpp  lsm6dsm.h  main.c  main.h  mmc5633njl.cpp  mmc5633njl.h  model.cpp  (+20 more)
fatfs/: diskio.h  ff.c  ffconf.h
openocd/: numicroM4.cfg  stlink.cfg
